# neural_net_digital_predistortion

./: README.md  bestmodel.keras  complex_data.mat  complex_data_torch.mat  dnn.ipynb  hls_fpga_accelerator.cpp  model.onnx  modified_model.onnx  modified_modified_model.onnx  tf_model.h5  tf_model_33_5dB_nprev_4.h5  tmp.txt  torch.ipynb
experimental_files/: bestmodel.keras  dnn_updated.ipynb  notes.txt  quantized_dnn.onnx  simple_dnn.onnx  tf_model_33_5dB_nprev_4.onnx  tf_model_single_y.h5  tmp.cpp  tmp.mat
experimental_files/fpga/hls/NN_act/: nn_act.cpp
experimental_files/fpga/ip_repo/NN_act/hdl/vhdl/: nn_act_BUS_A_s_axi.vhd
experimental_files/fpga/nn_test/: __init__.py  baseRF.py  nn_act.py  pl_interface.py  plotUtils.py  sigUtils.py
experimental_files/model_tst/variables/: variables.data-00000-of-00001
fpga/: bd_basic_kria.tcl  bd_basic_rfsoc.tcl
fpga/constraints/: NN_con.xdc
fpga/hls/NN_act/: nn_act.cpp  nn_act.h  nn_act_mem_test.cpp
fpga/ip_repo/NN_act/: component.xml
fpga/ip_repo/NN_act/doc/: ReleaseNotes.txt
fpga/ip_repo/NN_act/drivers/nn_act_v1_0/data/: nn_act.tcl
fpga/ip_repo/NN_act/drivers/nn_act_v1_0/src/: CMakeLists.txt  xnn_act_hw.h  xnn_act_linux.c  xnn_act_sinit.c
fpga/ip_repo/NN_act/hdl/verilog/: nn_act.v  nn_act_BUS_A_s_axi.v
fpga/ip_repo/NN_act/hdl/vhdl/: nn_act.vhd
fpga/nn_test/: NN_fpga_test.ipynb  __init__.py  baseRF.py  pl_interface.py  plotUtils.py  sigUtils.py
fpga/nn_test/rfsoc_bs/: io_kria.hwh  io_rfsoc.hwh
model_tst/: fingerprint.pb  saved_model.pb
model_tst/variables/: variables.index
(+5 files in other folders)
